--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
       <a id="sitesflow" href="https://www.linkedin.com/in/nirmal-patel687/">Linkedin.com/in/nirmal-patel687/</a></p></section></section>
     </div>
            <section id ="rightside">
-            <img  src="images/BabyNeal.jpg"
+            <img  src="BabyNeal.jpg"
             alt="Baby Neal" id="imagesmall"class="responsive-img" ><p id="img-caption">Baby Neal</p>
-            <img  src="images/VactaionNeal.jpg"
+            <img  src="VactaionNeal.jpg"
             alt="Vactaion Neal" id="imagesmall2"class="responsive-img" ><p id="img-caption">Vactaion Neal</p>
            </section>
            </div>
